# lob_research

./: .gitignore  README.md  main.py  pyproject.toml
config/: schema_map.yaml  settings.yaml
data/: download.ipynb
data/raw/databento/: download.ipynb
data/raw/databento/INTC/XNAS-20260429-VPAM4YXMUV/: condition.json  manifest.json  metadata.json
docs/: observation.md  project_plan.md
scripts/: data_analyze.ipynb  test.py  test_pipeline.py
scripts/assignments/assignment_1/: assignment_1_Q1-8.ipynb  assignment_1_Q9_fill_probability_analysis.ipynb
src/: pipeline.py
src/bookbuilder/: lifetime.py
src/ingestion/: coinbase.py  databento.py  stage_a.py
src/storage/: loader.py  validator.py  writer.py
src/utils/: logger.py
